ki change hoise likhben

--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
             <div class="menu-items">
                 <div class="line"></div>
                 <div>
-                    <img src="img/spaghetti.png" alt="Pasta">
+                    <img class="iron" src="img/spaghetti.png" alt="Pasta">
                     <h3>Lorem Ipsum Dolor</h3>
                     <p>Lorem ipsum dolor sit amet consectetur<br>
                         adipisicing elit. Nesciunt<br></p>
                     <button class="order-btn2">Order Now</button>
                 </div>
                 <div>
-                    <img src="img/Bread.png" alt="Bruschetta">
+                    <img class="iron" src="img/Bread.png" alt="Bruschetta">
                     <h3>Lorem Ipsum Dolor</h3>
                     <p>Lorem ipsum dolor sit amet consectetur<br>
                         adipisicing elit. Nesciunt<br></p>
                     <button class="order-btn2">Order Now</button>
                 </div>
                 <div>
-                    <img src="img/nuddle plate .png" alt="Salad">
+                    <img class="iron" src="img/nuddle plate .png" alt="Salad">
                     <h3>Lorem Ipsum Dolor</h3>
                     <p>Lorem ipsum dolor sit amet consectetur<br>
                         adipisicing elit. Nesciunt<br></p>
