ki change hoise likhben

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="website Icon" type="png"
+    href="img/Pizza Restaurant Logo Vector Design Images, Restaurant Logo, Cooking Logo, Organic Food Logo, Kitchen Logo PNG Image For Free Download.jpeg">
     <style>
         /*reset start */
         /*reset end*/
